--- a/backend/admin-service/Dockerfile
+++ b/backend/admin-service/Dockerfile
@@ -2,6 +2,7 @@
 FROM python:3.9-slim
 WORKDIR /app
 COPY requirements.txt /app/
+RUN pip install --no-cache-dir --upgrade pip
 RUN pip install -r requirements.txt
 COPY . /app/
 EXPOSE 8000
