--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -6,11 +6,13 @@ services:
       context: ./user-service
     ports:
       - "8000:8000"
-    environment:
-      - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql_db:3306/${MYSQL_DB_NAME}
-      - NEO4J_URI=${NEO4J_URI}
-      - NEO4J_USERNAME=${NEO4J_USERNAME}
-      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
+    env_file:
+      - ./user-service/.env
+#    environment:
+#      - DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@mysql_db:3306/${MYSQL_DB_NAME}
+#      - NEO4J_URI=bolt://neo4j_db:7687
+#      - NEO4J_USERNAME=neo4j
+#      - NEO4J_PASSWORD=P@7w^L!xZ#4QfN%9t
     depends_on:
       - mysql_db
       - neo4j_db
@@ -20,22 +22,32 @@ services:
       context: ./post-service
     ports:
       - "8001:8000"
+    env_file:
+      - ./post-service/.env
+    depends_on:
+      - mongodb
+#    environment:
+#      - MONGO_URI=${MONGO_URI}
 
-  admin-service:
-    build:
-      context: ./admin-service
-    ports:
-      - "8002:8000"
+#  admin-service:
+#    build:
+#      context: ./admin-service
+#    ports:
+#      - "8002:8000"
+#    env_file:
+#      - ./admin-service/.env.example
 
   mysql_db:
     image: mysql:8.0
     container_name: mysql_db
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DB_NAME}
+    env_file:
+      - ./user-service/.env
+#    environment:
+#      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+#      MYSQL_USER: ${MYSQL_USER}
+#      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+#      MYSQL_DATABASE: ${MYSQL_DB_NAME}
     ports:
       - "3307:3306"
     volumes:
@@ -48,14 +60,31 @@ services:
     ports:
       - "7474:7474"
       - "7687:7687"
-    environment:
-      - NEO4J_AUTH=${NEO4J_USERNAME}/${NEO4J_PASSWORD}
+    env_file:
+      - ./user-service/.env
+#    environment:
+#      - NEO4J_AUTH=neo4j/P@7w^L!xZ#4QfN%9t
+#      -
     volumes:
       - neo4j_data:/data
       - neo4j_logs:/logs
+
+  mongodb:
+    image: mongo:6.0
+    container_name: mongodb
+    restart: always
+    env_file:
+      - ./post-service/.env
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+#      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    ports:
+      - "27018:27017"
+    volumes:
+      - mongodb_data:/data/db
 
 volumes:
   mysql_data:
   neo4j_data:
   neo4j_logs:
-
+  mongodb_data:
