--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -26,11 +26,10 @@ docker-compose.override.yml
 *~
 
 # OS files
-=======
+.DS_Store
+Thumbs.db
+
 # Python
-__pycache__/
-*.py[cod]
-*$py.class
 *.so
 .Python
 build/
@@ -49,30 +48,6 @@ wheels/
 .installed.cfg
 *.egg
 
-# Django
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Environment variables
-.env
-.env.*
-!.env.example
-
-# Virtual Environment
-venv/
-ENV/
-env/
-.venv/
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
+# Database files
+init-mysql/*.sql
+init-mongodb/*.js
