--- a/backend/admin-service/requirements.txt
+++ b/backend/admin-service/requirements.txt
@@ -6,3 +6,8 @@ sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.2
 django-cors-headers==3.14.0
+requests==2.31.0
+python-dotenv==1.0.0
+djangorestframework-simplejwt==5.3.1
+python-decouple==3.8
+PyJWT==2.8.0
