--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,9 @@ jobs:
     - name: Generate .env Files on EC2
       run: |
         ssh -o StrictHostKeyChecking=no -i ~/.ssh/deploy_key.pem ec2-user@52.90.236.164 << 'EOF'
-        
+        mkdir /home/ec2-user/new
+        mkdir -p /home/ec2-user/deployment/user-service
+        mkdir -p /home/ec2-user/deployment/post-service
         echo "${{ secrets.USER_SERVICE_ENV }}" > /home/ec2-user/deployment/user-service/.env
         echo "${{ secrets.POST_SERVICE_ENV }}" > /home/ec2-user/deployment/post-service/.env
         EOF
