--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,6 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ec2-user@52.90.236.164 << 'EOF'
         cd /home/ec2-user/deployment/backend
-        docker-compose down
-        docker-compose pull
-        docker-compose up -d
+        docker-compose down -v
+        docker-compose up --build
         EOF
