--- a/backend/admin-service/Dockerfile
+++ b/backend/admin-service/Dockerfile
@@ -1,9 +1,31 @@
-# Dockerfile for admin-service
-FROM python:3.9-slim
+FROM python:3.11-slim
+
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Set work directory
 WORKDIR /app
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir --upgrade pip
-RUN pip install -r requirements.txt
-COPY . /app/
-EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+# Install system dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        default-libmysqlclient-dev \
+        build-essential \
+        pkg-config \
+        netcat-traditional \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy project
+COPY . .
+
+# Add wait-for-it script
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
+
+# Run the application
+CMD ["/wait-for-it.sh", "admin_mysql_db:3306", "--timeout=60", "--", "sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
