--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - ./post-service/.env
     depends_on:
       - mongodb
+      - redis
     networks:
       - thread-hive-network
 
@@ -33,6 +34,17 @@ services:
   #      - "8002:8000"
   #    env_file:
   #      - ./admin-service/.env.example
+
+  redis:
+    image: redis:7.2-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - thread-hive-network
+    command: redis-server --save 60 1 --loglevel warning
 
   mysql_db:
     image: mysql:8.0
@@ -112,14 +124,15 @@ services:
     networks:
       - thread-hive-network
     environment:
-      KAFKA_BROKER: kafka:9092  # Kafka broker address
-      TOPIC_NAME: user_signup  # Replace with your topic name
+      KAFKA_BROKER: kafka:9092 # Kafka broker address
+      TOPIC_NAME: user_signup # Replace with your topic name
 
 volumes:
   mysql_data:
   neo4j_data:
   neo4j_logs:
   mongodb_data:
+  redis_data:
 
 networks:
   thread-hive-network:
